# edge-c2-sim

./: .env.example  .env.production.example  .gitattributes  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
auth/: Dockerfile  config.py  main.py  models.py  requirements.txt
config/: entity_types.json  scenario.schema.json  sidc_overrides.json
cop/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
docs/: API_INTEGRATION.md  CLAUDE_CODE_EC2_DEPLOYMENT.md  CLAUDE_CODE_EC2_DEPLOYMENT.md:Zone.Identifier  CLAUDE_CODE_PHASE_0.md  CLAUDE_CODE_PHASE_0.md:Zone.Identifier  CLAUDE_CODE_PHASE_1.md  CLAUDE_CODE_PHASE_1.md:Zone.Identifier  CLAUDE_CODE_PHASE_2.md  CLAUDE_CODE_PHASE_2.md:Zone.Identifier  CLAUDE_CODE_PHASE_3.md  CLAUDE_CODE_PHASE_3.md:Zone.Identifier  CLAUDE_CODE_PHASE_4.md  CLAUDE_CODE_PHASE_4.md:Zone.Identifier  CLAUDE_CODE_PHASE_5.md  CLAUDE_CODE_PHASE_5.md:Zone.Identifier  CLAUDE_CODE_REPLACE_MILSYMBOL.md  CLAUDE_CODE_REPLACE_MILSYMBOL.md:Zone.Identifier  CLAUDE_CODE_SCENARIO_BUILDER.md  CLAUDE_CODE_SCENARIO_BUILDER.md:Zone.Identifier  CLAUDE_CODE_SIDC_FIXES.md  COP_DASHBOARD_DESIGN.md  COP_DASHBOARD_DESIGN.md:Zone.Identifier  DECLUTTER_STRATEGY.md  DECLUTTER_STRATEGY.md:Zone.Identifier  DEMO_CHECKLIST.md  EC2_Simulator_Bug_Report.txt  Edge C2 Simulation Platform.rtf  Edge_C2_Simulation_Platform.md  SCENARIO_AUDIT.md  SCENARIO_AUDIT_PART2.md  SCENARIO_AUTHORING.md  SCENARIO_AUTHORING.md:Zone.Identifier  SIDC_AND_POSITION_FIXES.md  (+11 more)
scripts/: =2.3  (+19 more)
(+152 files in other folders)
